--- a/content/project/220407_internal-project/index.Rmd
+++ b/content/project/220407_internal-project/index.Rmd
@@ -27,29 +27,44 @@ bibliography: /home/sl1016/SLfiles/all_R/myproj/blogs/Rnotes/content/project/ref
 toc: true
 ---
 
-This is a collection of notes on setting up my first blogdown, which is simple including only Home, Blogs, Projects and Contact. For comprehensive coverage, please refer to the ebook by Yihui Xie, Amber Thomas, Alison Presmanes Hill [-@hill_blogdown_2022]. Several tutorials including Alison Hill's [blog1](https://www.apreshill.com/blog/2020-12-blogdown-checks/) and [blog2](https://alison.rbind.io/blog/2020-12-new-year-new-blogdown/), A. Solomon Kurz's [blog](https://solomonkurz.netlify.app/post/2021-05-03-blogdown-updates-prompted-a-website-overhaul-these-are-my-notes/) and Jenny Sloane's [blog](https://jennysloane.netlify.app/blog/blogdown/) are great resources.
+This is a collection of notes on setting up my first blogdown, which is simple including only Home, Blogs, Projects and Contact. For comprehensive coverage, please refer to the ebook by Yihui Xie, Amber Thomas, Alison Presmanes Hill [-@hill_blogdown_2022]. Several tutorials including Alison Hill's [blog1](https://www.apreshill.com/blog/2020-12-blogdown-checks/),  [blog2](https://alison.rbind.io/blog/2020-12-new-year-new-blogdown/), A. Solomon Kurz's [blog](https://solomonkurz.netlify.app/post/2021-05-03-blogdown-updates-prompted-a-website-overhaul-these-are-my-notes/) and Jenny Sloane's [blog](https://jennysloane.netlify.app/blog/blogdown/) are great resources.
 
-Here, I will just emphasize some of the important points. If you happen to read this post, I 'd assume that you are already familiar to R, RStudio as well as github. Otherwise, please install them first before going any further. 
+Here, I will just emphasize some of the important points. If you happen to read this post, I 'd assume that you are already familiar to R, RStudio as well as Github. Otherwise, please install them first before going any further. 
 
 ## Start project from creating repo at your github  
 
-You can find the screenshot from Alison Hill's [blog](https://alison.rbind.io/blog/2020-12-new-year-new-blogdown/). Then, click the green code button, you see `https://github.com/your_user_name/your_repo.git` with a double squares at the right end. Click to copy this URL link and go to your RStudio, create a new project, `File -> New Project -> Version Control -> Git`, paste the link to start your new project directory, which is your project root directory.  
+You can find the screenshot from Alison Hill's [blog](https://alison.rbind.io/blog/2020-12-new-year-new-blogdown/). Then, click the `green code button`, you see `https://github.com/your_user_name/your_repo.git` with a double squares at the right end. Click to copy this URL link and go to your RStudio and create a new project. Follow steps, `File -> New Project -> Version Control -> Git`, and then paste the repo link to get your new project directory, which is your project root directory.  
 
-## Work with blogdown  
+## Work with hugo  
 
-Now, you are ready to work on your blogdown project. Before doing anything, be sure blogdown is installed and then you can work on the console.  
+Now, you are ready to work on your blogdown project. Before doing anything, be sure `blogdown` package is installed and then you can work on the console to run the following commands.  
 
 * `blogdown::install_hugo()`: hugo is a static site generator.  
-* `blogdown::new_site(theme = "wowchemy/starter-academic")`: I used this theme, but you can try [others](https://hugothemesfree.com/). At this step, you would see a bunch of files and folders generated in your project directory. And choose `y` to the prompt `Want to serve and preview the site now? (y/n).` to start the local server.  If you click the `viewer` tab in a quadrant pane, you 'd see your site open.    
+* `blogdown::new_site(theme = "wowchemy/starter-academic")`: I chosen this theme, but you may try [others](https://hugothemesfree.com/) if you like. At this step, you would see a bunch of files and folders generated in your project directory, and choose `y` to the prompt `Want to serve and preview the site now? (y/n).` to start the local server. Now, if you click the `viewer` tab in a quadrant pane, you 'd see your site open for the first time.    
 
 ## Work on .gitignore  
 
-There are files we won't like to share with public for reasons. We can put those under `.gitignore`.  If you are not so sure, you can run a couple of check at console to get suggestions.  
+There are files we won't like to share with public for reasons. We can put those under `.gitignore`.  If you are not so sure, you can run a check below at console to get suggestions.  
 
-* `blogdown::check_gitignore()`: You get the file or folder names suggested.  
-* `file.edit(".gitignore")`: Add all suggested into the list. You'd get the same [list](https://solomonkurz.netlify.app/post/2021-05-03-blogdown-updates-prompted-a-website-overhaul-these-are-my-notes/)    
+* `blogdown::check_gitignore()`: You get the file or folder names suggested. [See         here](https://www.apreshill.com/blog/2020-12-blogdown-checks/).   
+    
+* `file.edit(".gitignore")`: Add all suggested into the list. You'd expect to see the same [list](https://solomonkurz.netlify.app/post/2021-05-03-blogdown-updates-prompted-a-website-overhaul-these-are-my-notes/). If you check it again, you 'd expect to see the following:  
 
-## Work with Netlify  
+         ― Checking .gitignore
+        | Checking for items to remove...
+        ○ Nothing to see here - found no items to remove.
+        | Checking for items to change...
+        ○ Nothing to see here - found no items to change.
+        | Checking for items you can safely ignore...
+        ○ Found! You have safely ignored: .DS_Store, Thumbs.db, .hugo_build.lock
+        | Checking for items to ignore if you build the site on Netlify...
+        ○ Found! You have safely ignored: /public/, /resources/
+        | Checking for files required by blogdown but not committed...
+        ○ Great! Did not find such files.
+        ― Check complete: .gitignore
+        
+
+## Work with Netlify for deployment 
 
 Netlify provides a free service for personal account. Follow Jenney Sloane's [blog](https://jennysloane.netlify.app/blog/blogdown/). Regarding hugo, mine hugo version is `0.96.0`, the latest one. Be sure it is consistent in all places.  
 
